// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Markdown WidgetData 1`] = `
<div>
  <div
    class="custom-scrollbar"
    style="position: relative; overflow: hidden; width: 100%; height: auto; min-height: 100%; max-height: 100%;"
  >
    <div
      class="view"
      style="position: relative; overflow: scroll; margin-right: 0px; margin-bottom: 0px; min-height: calc(100% + 0px); max-height: calc(100% + 0px);"
    >
      <div>
        # Hello World
      </div>
    </div>
    <div
      class="track-horizontal"
      style="position: absolute; height: 6px; display: none;"
    >
      <div
        class="thumb-horizontal"
        style="position: relative; display: block; height: 100%;"
      />
    </div>
    <div
      class="track-vertical"
      style="position: absolute; width: 6px; display: none;"
    >
      <div
        class="thumb-vertical"
        style="position: relative; display: block; width: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`renders Markup WidgetData 1`] = `
<div>
  <div
    class="custom-scrollbar"
    style="position: relative; overflow: hidden; width: 100%; height: auto; min-height: 100%; max-height: 100%;"
  >
    <div
      class="view"
      style="position: relative; overflow: scroll; margin-right: 0px; margin-bottom: 0px; min-height: calc(100% + 0px); max-height: calc(100% + 0px);"
    >
      <div>
        <h1>
          Hello World
        </h1>
      </div>
    </div>
    <div
      class="track-horizontal"
      style="position: absolute; height: 6px; display: none;"
    >
      <div
        class="thumb-horizontal"
        style="position: relative; display: block; height: 100%;"
      />
    </div>
    <div
      class="track-vertical"
      style="position: absolute; width: 6px; display: none;"
    >
      <div
        class="thumb-vertical"
        style="position: relative; display: block; width: 100%;"
      />
    </div>
  </div>
</div>
`;
